--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/stack": "^6.0.4",
     "@reduxjs/toolkit": "^1.6.1",
     "@types/react-redux": "^7.1.18",
+    "axios": "^0.21.1",
     "i18next": "^20.4.0",
     "react": "17.0.2",
     "react-i18next": "^11.11.4",
